--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="CobelliMoixTomas.isi.frsf.utn.sendmeal">
+    package="cobelli_moix_tomas.isi.frsf.utn.sendmeal">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity android:name="cobelli_moix_tomas.isi.frsf.utn.sendmeal.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
