--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_hamburguesa2_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
         <activity
             android:name=".Home"
             android:label="@string/app_name"
@@ -20,12 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity">
-        </activity>
-        <activity
-            android:name=".NewItem">
-        </activity>
+
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".NewItem"></activity>
+        <receiver
+            android:name=".ui.BroadcastReceiverOferta"
+            android:enabled="true"
+            android:exported="true"></receiver>
     </application>
 
 </manifest>
