--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cobelli_moix_tomas.isi.frsf.utn.sendmeal">
 
-    <uses-permission android:name = "android.permission.INTERNET"/>
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
+        <activity android:name=".ui.AgregarPlatosAlPedido"></activity>
         <activity
             android:name=".Home"
             android:label="@string/app_name"
@@ -27,7 +25,9 @@
         <receiver
             android:name=".ui.BroadcastReceiverOferta"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
