--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.google.android.gms:play-services-maps:9.0.1'
     implementation 'com.google.firebase:firebase-core:17.0.0'
 
     def room_version = "2.2.0-beta01"
