--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.AgregarPlatosAlPedido"></activity>
+        <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".ui.AgregarPlatosAlPedido" />
         <activity
             android:name=".Home"
             android:label="@string/app_name"
@@ -22,6 +23,13 @@
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCuYHwH_F4qzlVLJYDJWIR5FZWS_eN5loA" />
         <receiver
             android:name=".ui.BroadcastReceiverOferta"
             android:enabled="true"
