--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,8 @@ android {
 }
 
 dependencies {
-
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
-    implementation 'com.google.firebase:firebase-core:17.0.0'
 
     def room_version = "2.2.0-beta01"
     implementation "androidx.room:room-runtime:$room_version"
@@ -48,6 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
